# droneMD

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
backend/: __init__.py  launch.py
backend/api/: __init__.py  server.py
backend/core/: __init__.py
backend/data/: drones.toml
backend/engine/: __init__.py  controller.py  engine.py  shapes.py
backend/flocking/: engine.py  obj_processor.py  primitives.py  router.py  schemas.py  spawn.py
backend/routes/: __init__.py  router.py  schemas.py
backend/utils/: __init__.py  gpu_info.py  utils.py
data/gpu_benchmarks/: gpu_cloudAMDonJupyter.json  gpu_crazyflow_mi300x.json  gpu_jax_benchmark.json  gpu_rx7600s_measurements.json
scripts/: bench-mi300x-gpu.py  benchmark.py  deploy.sh  gen_human_body_playback.py  generate_default_playback.py  install_rocm_jax.sh  precompute_obj_points.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/public/data/: default-obj-points.json  human-body-playback.json  star-playback.json
web/src/: App.tsx  BenchmarkCard.tsx  Onboarding.tsx  Player.tsx  ReportPanel.tsx  ReportTabs.tsx  SwarmLab.tsx  api.ts  export.ts  styles.css  types.ts
