[build-system]
requires = ["setuptools>=61.0.0", "wheel", "numpy>=2.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dronemd"
version = "0.0.1"
description = "DroneMD - GPU-accelerated drone swarm flocking simulation"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
]

dependencies = [
    "fire",
    "toml",
    "einops",
    "numpy>=2.0.0",
    "scipy>=1.17.0,<1.18.0",
    "tqdm",
    "pyyaml",

    # LLM
    "ollama",
    "openai",

    # Web
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",

    # Sim
    "axswarm @ git+https://github.com/learnsyslab/axswarm.git",
    "crazyflow==0.1.0",
    "drone-models==0.1.0",
    "drone-controllers==0.1.0",
    "jax>=0.7",
]

[project.optional-dependencies]

cuda = [
    "jax-cuda12-plugin==0.10.1; sys_platform == 'linux'",
    "jax-cuda12-pjrt==0.10.1; sys_platform == 'linux'",
]

test = [
    "pytest>=8.4.1",
    "pytest-timeout>=2.1.0",
    "pytest-cov>=6.0.0",
    "array-api-strict>=2.4.1",
    "torch>=2.7.0",
]

dev = [
    "ruff",
]

all = [
    "axswarm @ git+https://github.com/learnsyslab/axswarm.git",
    "crazyflow==0.1.0",
    "drone-models==0.1.0",
    "drone-controllers==0.1.0",
    "jax >= 0.7",
    "jax-cuda12-plugin==0.10.1; sys_platform == 'linux'",
    "jax-cuda12-pjrt==0.10.1; sys_platform == 'linux'",
    "pytest>=8.4.1",
    "pytest-timeout>=2.1.0",
    "pytest-cov>=6.0.0",
    "array-api-strict>=2.4.1",
    "torch>=2.7.0",
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-section-index",
    "click==8.2.1",
    "ruff",
]

[tool.setuptools.packages]
find = {}

[tool.setuptools.package-data]
lsy_drone_racing = [
    "envs/assets/*.xml",
    "envs/assets/*.png",
]

[tool.pytest.ini_options]
markers = [
    "unit",
    "integration",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "docs/conf.py",
    "tools/*",
]

line-length = 100
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "D", "TCH", "ANN"]
ignore = ["ANN401"]
fixable = ["ALL"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["D", "ANN"]
"experiments/*" = ["D", "ANN"]
"tests/*" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-annotations]
suppress-dummy-args = true
suppress-none-returning = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"